ajout d'une image

--- a/exo-banniere.html
+++ b/exo-banniere.html
@@ -10,16 +10,23 @@
   </head>
   <body>
   	<div class="fixed">
-  	 <ul class="inline">
-      <li><img src="img/iconmonstr-favorite-8-24.png" alt="un petit coeur jaune" /> </li>
-      <li><a href="">Accueil</a> </li>
-      <li><a href="">Profil</a> </li>
-      <li><a href="">Membres</a></li>
-      <li><a href="">Groupes</a></li>
-      <li><a href="">Messages Prives</a></li>
-      <li><a href="">Deconnexion</a></li>
-      <li><img src="img/iconmonstr-favorite-8-24.png" alt="un petit coeur jaune" /> </li>
-     </ul>
+        <div class="flex">
+        <img src="img/iconmonstr-favorite-8-24.png" alt="un petit coeur jaune" />
+        </div>
+        <div class="flex">
+          <ul class="inline">
+            <li><a href="">Accueil</a> </li>
+            <li><a href="">Profil</a> </li>
+            <li><a href="">Membres</a></li>
+            <li><a href="">Groupes</a></li>
+            <li><a href="">Messages Prives</a></li>
+            <li><a href="">Deconnexion</a></li>
+          </ul>
+        </div>
+        <div class="flex">
+        <img src="img/iconmonstr-favorite-8-24vio.png" alt="un petit coeur jaune" />
+        </div>
+      
   	</div>
 
   		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
